# pdfembed

./: LICENSE  README.ja.md  README.md  pyproject.toml
src/pdfembed/: __init__.py  cli.py
tests/: test_cli.py
