[project]
name = "pdfembed"
version = "0.1.3"
description = "CLI/TUI tool to run OCR locally and overlay a searchable text layer on PDFs."
readme = "README.md"
authors = [
    { name = "harumiWeb", email = "ganaharumi@outlook.jp" }
]
license = { text = "BSD-3-Clause" }
requires-python = ">=3.12"
dependencies = [
    "numpy>=1.26.4",
    "onnxocr>=2025.5",
    "opencv-python>=4.11.0.86",
    "pypdf>=6.4.0",
    "pypdfium2>=5.1.0",
    "reportlab>=4.4.5",
    "textual>=6.6.0",
]

[build-system]
requires = ["uv_build>=0.8.4,<0.9.0"]
build-backend = "uv_build"

[tool.uv_build]
include = [
    "src/pdfembed/fonts/ipaexg.ttf",
    "src/pdfembed/fonts/IPA_Font_License_Agreement_v1.0.txt",
]

[dependency-groups]
dev = [
    "pytest>=9.0.1",
    "pytest-mock>=3.15.1",
]

[project.scripts]
pdfembed = "pdfembed.cli:main"
